--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,13 @@ dependencies = [
     "langgraph (>=1.0.7,<2.0.0)",
     "pydantic-settings (>=2.12.0,<3.0.0)",
     "python-dotenv (>=1.2.1,<2.0.0)",
-    "sse-starlette (>=3.2.0,<4.0.0)"
+    "sse-starlette (>=3.2.0,<4.0.0)",
+    "langchain-openai (>=1.1.9,<2.0.0)",
+    "onnxruntime (==1.23.2)",
+    "chromadb (>=1.5.0,<2.0.0)",
+    "sentence-transformers (>=5.2.2,<6.0.0)",
+    "langchain-ollama (>=1.0.1,<2.0.0)",
+    "ollama (>=0.6.1,<0.7.0)"
 ]
 
 
