--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,12 @@ dependencies = [
     "chromadb (>=1.5.0,<2.0.0)",
     "sentence-transformers (>=5.2.2,<6.0.0)",
     "langchain-ollama (>=1.0.1,<2.0.0)",
-    "ollama (>=0.6.1,<0.7.0)"
+    "ollama (>=0.6.1,<0.7.0)",
+    "beautifulsoup4 (>=4.14.3,<5.0.0)",
+    "httpx (>=0.28.1,<0.29.0)",
+    "psutil (>=5.9.0,<6.0.0)",
+    "loguru (>=0.7.3,<0.8.0)",
+    "langchain-anthropic (>=1.3.3,<2.0.0)"
 ]
 
 
